[package]
name = "term-lab"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Val Cubeto <valcubetaa@gmail.com>"]
description = "A crate to easily work with terminal styles and get terminal info."
repository = "https://github.com/ValCubeto/term-lab.rs"
homepage = "https://github.com/ValCubeto/term-lab.rs"
readme = "README.md"
keywords = ["terminal", "style", "color", "rgb"]
categories = ["command-line-interface"]
exclude = ["target", "Cargo.lock", "src/main.rs", ".git"]

[dependencies]
cfg-if = "1.0.0"
cps = "0.2.3"
rustix = { version = "0.38.44", features = ["termios"] }
windows-sys = { version = "0.45.0", features = ["Win32", "Win32_Foundation", "Win32_System", "Win32_System_Console"] }

[features]
